ChangeLog for ircd-seven
========================

This file lists every change made except typo and formatting fixes, which are
only listed in SVN log. For a summary of what has changed between releases,
see the NEWS file.

2006-10-15 Stephen Bennett <spb@gentoo.org>

	* Makefile.in, src/Makefile.in, unsupported/Makefile.in,
	extensions/Makefile.in, tools/Makefile.in, doc/Makefile.in,
	modules/Makefile.in: Use mkdir -p in lots of places.

2006-10-15 Stephen Bennett <spb@gentoo.org>

	* include/s_conf.h, src/newconf.c, modules/m_kline.c: Allow disabling
	of KLINE foo@bar ON server.name in config, and when enabled send out
	netwide server notices when it is used. This does not affect clustered
	K-Lines.

2006-10-15 Stephen Bennett <spb@gentoo.org>

	* include/snomask.h, include/s_newconf.h, src/newconf.c,
	src/snomask.c, src/s_newconf.c, modules/m_grant.c: Make GRANT work
	remotely.

2006-10-15 Stephen Bennett <spb@gentoo.org>

	* include/snomask.h, src/snomask.c, modules/m_grant.c: Make GRANT work
	with allowed snomasks.

2006-10-15 Stephen Bennett <spb@gentoo.org>

	* include/s_newconf.h, src/newconf.c, src/s_newconf.c,
	modules/Makefile.in, +modules/m_grant.c: Add initial GRANT support,
	based on jilles's charybdis module.

2006-10-14 Stephen Bennett <spb@gentoo.org>

	* include/s_conf.h, include/client.h, src/newconf.c,
	modules/m_whois.c, modules/m_who.c: Add new config entry 'hide_opers'.
	If set, opers will not be shown in /whois or /who except to other
	opers.

2006-10-14 Stephen Bennett <spb@gentoo.org>

	* include/s_newconf.h, src/newconf.c, src/s_newconf.c,
	modules/m_scan.c: Add new scan operflag.

2006-10-14 Stephen Bennett <spb@gentoo.org>

	* src/s_user.c, src/s_conf.c, src/channel.c, src/client.c, src/hash.c,
	src/send.c, src/s_serv.c, src/modules.c, src/parse.c, src/ircd.c,
	modules/m_services.c, modules/m_svinfo.c, modules/m_restart.c,
	modules/m_signon.c, modules/core/m_message.c, modules/core/m_nick.c,